[JBWS-4075] Alessio's changes. maven.invoker.plugin version update.